; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap1/extr_mailbox.c_omap1_mbox_disable_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap1/extr_mailbox.c_omap1_mbox_disable_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_mbox = type { i32 }

@IRQ_RX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.omap_mbox*, i64)* @omap1_mbox_disable_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap1_mbox_disable_irq(%struct.omap_mbox* %0, i64 %1) #0 {
  %3 = alloca %struct.omap_mbox*, align 8
  %4 = alloca i64, align 8
  store %struct.omap_mbox* %0, %struct.omap_mbox** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @IRQ_RX, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load %struct.omap_mbox*, %struct.omap_mbox** %3, align 8
  %10 = getelementptr inbounds %struct.omap_mbox, %struct.omap_mbox* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @disable_irq(i32 %11)
  br label %13

13:                                               ; preds = %8, %2
  ret void
}

declare dso_local i32 @disable_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
